src/importer/exmaralda/snapshots/annatto__importer__exmaralda__tests__serialize.snap
---
source: src/importer/exmaralda/tests.rs
expression: serialization.unwrap()
---
merge_events = true
