src/importer/exmaralda/snapshots/annatto__importer__exmaralda__tests__speaker_fail.snap
---
source: src/importer/exmaralda/tests.rs
expression: r.err().unwrap()
---
Error during importing corpus to ./tests/data/import/exmaralda/fail-no_speaker/test_doc.exb with "import_exmaralda": "Undefined speaker (not defined in tier attributes)."
