src/importer/exmaralda/snapshots/annatto__importer__exmaralda__tests__undefined_speaker_fail.snap
---
source: src/importer/exmaralda/tests.rs
expression: r.err().unwrap().to_string()
---
Error during importing corpus from ./tests/data/import/exmaralda/fail-undefined_speaker/test_doc.exb with import_exmaralda: Speaker `dipl` has not been defined in speaker-table.
