src/importer/exmaralda/snapshots/annatto__importer__exmaralda__tests__unknown_tli_fail.snap
---
source: src/importer/exmaralda/tests.rs
expression: r.err().unwrap().to_string()
---
Error during importing corpus from ./tests/data/import/exmaralda/fail-unknown_tli/test_doc.exb with import_exmaralda: Unknown time line item: T800
